ol-osm-map added
something broken now in ollayergroup_controller.js

--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,2 +1,4 @@
 <h1>Demo#index</h1>
 <p>Find me in app/views/demo/index.html.erb</p>
+<div><%= link_to "ol-layer-group", ollayergroup_path %><div>
+<div><%= link_to "ol-osm-map", olosmmap_path %></div>
