--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Demo#index</h1>
-<p>Find me in app/views/demo/index.html.erb</p>
+<h1>Demos of OpenLayers and Leaflet Using Rails Stimulus</h1>
+
 <div><%= link_to "ol-layer-group", ollayergroup_path %><div>
 <div><%= link_to "ol-osm-map", olosmmap_path %></div>
+<div><%= link_to "ol-static-image", olstaticimage_path %></div>
