--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -3,3 +3,4 @@
 <div><%= link_to "ol-layer-group", ollayergroup_path %><div>
 <div><%= link_to "ol-osm-map", olosmmap_path %></div>
 <div><%= link_to "ol-static-image", olstaticimage_path %></div>
+<div><%= link_to "leaflet-test", leaflettest_path %></div>
