leaflet-test now working
Had to add images to /vendor (not sure if /public would have worked

--- a/app/views/demo/leaflettest.html.erb
+++ b/app/views/demo/leaflettest.html.erb
@@ -2,7 +2,8 @@
 
 <div><%= link_to "Back to Index", root_path %></div>
 
-<p>leaflet-test</p>
+<p class="text-center"><%= link_to "Leaflet Layers Control", "https://leafletjs.com/examples/layers-control/" %></p>
+
 <div id="mapll" data-controller="leaflet-test" data-leaflet-test-target="leaftest" style="height:400px"></div>
 
 <div><%= link_to "Back to Index", root_path %></div>
