--- a/app/views/demo/leaflettest.html.erb
+++ b/app/views/demo/leaflettest.html.erb
@@ -1,9 +1,11 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<div><%= link_to "Back to Index", root_path %></div>
-
 <p class="text-center"><%= link_to "Leaflet Layers Control", "https://leafletjs.com/examples/layers-control/" %></p>
 
 <div id="mapll" data-controller="leaflet-test" data-leaflet-test-target="leaftest" style="height:400px"></div>
 
-<div><%= link_to "Back to Index", root_path %></div>
+<div class="text-center">
+	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success" %>
+	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
+	<%= link_to "OpenLayers with Layer Group", ollayergroup_path, class: "btn btn-outline-success" %>
+</div>
