--- a/app/views/demo/olstaticimage.html.erb
+++ b/app/views/demo/olstaticimage.html.erb
@@ -1,8 +1,11 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<div><%= link_to "Back to Index", root_path %></div>
+<h4><%= link_to "Static Image OpenLayers Example", "https://openlayers.org/en/latest/examples/static-image.html" %></h4>
 
-<hr><h4><%= link_to "Static Image OpenLayers Example", "https://openlayers.org/en/latest/examples/static-image.html" %></h4>
 <div id="mapsi" data-controller="ol-static-image" data-ol-static-image-target="simage" style="height:400px"></div>
 
-<div><%= link_to "Back to Index", root_path %></div>
+<div class="text-center">
+	<%= link_to "OpenLayers with an OSM map", olosmmap_path, class: "btn btn-outline-success" %>
+	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
+	<%= link_to "Leaflet with a map and markers", leaflettest_path, class: "btn btn-outline-success" %>
+</div>
