--- a/app/views/demo/ollayergroup.html.erb
+++ b/app/views/demo/ollayergroup.html.erb
@@ -1,8 +1,10 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<div><%= link_to "Back to Index", root_path %></div>
-
 <p>ol-layer-group in os-stimulus-mapping</p>
 <div id="mapolg" data-controller="ol-layer-group" data-ol-layer-group-target="lgmap" style="height:400px">data-controller=ol-layer-group</div>
 
-<div><%= link_to "Back to Index", root_path %></div>
+<div class="text-center">
+	<%#= link_to 'Marietich (Previous)', 'marietich', class: "btn btn-outline-success" %>
+	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info" %>
+	<%= link_to "Next: OpenLayers with an OSM map", olosmmap_path, class: "btn btn-outline-success" %>
+</div>
