--- a/app/views/demo/leaflettest.html.erb
+++ b/app/views/demo/leaflettest.html.erb
@@ -4,6 +4,7 @@
 
 <div id="mapll" data-controller="leaflet-test" data-leaflet-test-target="leaftest" style="height:400px"></div>
 
+<div>&nbsp;</div>
 <div class="text-center">
 	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success" %>
 	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
