--- a/app/views/demo/ollayergroup.html.erb
+++ b/app/views/demo/ollayergroup.html.erb
@@ -3,6 +3,7 @@
 <p>ol-layer-group in os-stimulus-mapping</p>
 <div id="mapolg" data-controller="ol-layer-group" data-ol-layer-group-target="lgmap" style="height:400px">data-controller=ol-layer-group</div>
 
+<div>&nbsp;</div>
 <div class="text-center">
 	<%#= link_to 'Marietich (Previous)', 'marietich', class: "btn btn-outline-success" %>
 	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info" %>
