--- a/app/views/demo/olosmmap.html.erb
+++ b/app/views/demo/olosmmap.html.erb
@@ -1,11 +1,10 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<div><%= link_to "Back to Index", root_path %></div>
-
 <p>ol-osm-map</p>
 <div id="maposm" data-controller="ol-osm-map" data-ol-osm-map-target="osmmap" style="height:400px"></div>
 
-<div class="center">
+<div>&nbsp;</div>
+<div class="text-center">
 	<%= link_to "OpenLayers with Layer Group", ollayergroup_path, class: "btn btn-outline-success" %>
 	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
 	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success"  %>
