--- a/app/views/demo/olstaticimage.html.erb
+++ b/app/views/demo/olstaticimage.html.erb
@@ -1,9 +1,10 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<h4><%= link_to "Static Image OpenLayers Example", "https://openlayers.org/en/latest/examples/static-image.html" %></h4>
+<h4 class="text-center"><%= link_to "Static Image OpenLayers Example", "https://openlayers.org/en/latest/examples/static-image.html" %></h4>
 
 <div id="mapsi" data-controller="ol-static-image" data-ol-static-image-target="simage" style="height:400px"></div>
 
+<div>&nbsp;</div>
 <div class="text-center">
 	<%= link_to "OpenLayers with an OSM map", olosmmap_path, class: "btn btn-outline-success" %>
 	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
