Clean up. demo/index additions

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -1,4 +1,4 @@
 @import 'bootstrap/scss/bootstrap';
 @import 'bootstrap-icons/font/bootstrap-icons';
+@import 'leaflet/dist/leaflet';
 @import 'ol-layerswitcher/dist/ol-layerswitcher';
-@import 'leaflet/dist/leaflet'
