--- a/app/views/demo/leaflettest.html.erb
+++ b/app/views/demo/leaflettest.html.erb
@@ -7,6 +7,6 @@
 <div>&nbsp;</div>
 <div class="text-center">
 	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success" %>
-	<%= link_to "Back to Index", root_path, class: "btn btn-outline-info"  %>
+	<%= link_to "Main Page", root_path, class: "btn btn-outline-info"  %>
 	<%= link_to "OpenLayers with Layer Group", ollayergroup_path, class: "btn btn-outline-success" %>
 </div>
