--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
-  <body class="container-fluid pt-5 mt-5">
+  <body class="container-fluid px-4">
     <%= yield %>
   </body>
 </html>
