--- a/app/views/demo/ollayergroup.html.erb
+++ b/app/views/demo/ollayergroup.html.erb
@@ -11,6 +11,6 @@
 <div>&nbsp;</div>
 <div class="text-center">
 	<%#= link_to 'Marietich (Previous)', 'marietich', class: "btn btn-outline-success" %>
-	<%= link_to "Main Page", root_path, class: "btn btn-outline-info" %>
+	<%= link_to "Home Page", root_path, class: "btn btn-outline-info" %>
 	<%= link_to "Next: OpenLayers with an OSM map", olosmmap_path, class: "btn btn-outline-success" %>
 </div>
