--- a/app/views/demo/olosmmap.html.erb
+++ b/app/views/demo/olosmmap.html.erb
@@ -7,6 +7,6 @@
 <div>&nbsp;</div>
 <div class="text-center">
 	<%= link_to "OpenLayers with Layer Group", ollayergroup_path, class: "btn btn-outline-success" %>
-	<%= link_to "Main Page", root_path, class: "btn btn-outline-info"  %>
+	<%= link_to "Home Page", root_path, class: "btn btn-outline-info"  %>
 	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success"  %>
 </div>
