--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   </head>
 
   <body class="container-fluid px-5">
-    <div class="py-2 text-center fst-italic"><%= link_to "Home page at fly.dev", "https://rails-openlayers-leaflet.fly.dev/" %></div>
+    <div class="py-2 fst-italic"><%= link_to "Home Page", "https://rails-openlayers-leaflet.fly.dev/" %></div>
     <%= yield %>
   </body>
 </html>
