Title change. Clean up of ollayergroup_controller

--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -32,6 +32,7 @@
 
 <div class="py-2">Below are several demos I put together to help me sort this out. I tried to do this in my existing apps but ran into conflicts.</div>
 
+<div class="py-1"><%= link_to "OpenLayers Basic Layer Switcher", ollayerswitcher_path %></div>
 <div class="py-1"><%= link_to "OpenLayers with Layer Group", ollayergroup_path, class: "icon-next" %>. Not working yet. A JavaScript problem?<div>
 <div class="py-1"><%= link_to "OpenLayers with an OSM map", olosmmap_path %></div>
 <div class="py-1"><%= link_to "OpenLayers with a Static Image", olstaticimage_path %></div>
