--- a/app/views/demo/ollayergroup.html.erb
+++ b/app/views/demo/ollayergroup.html.erb
@@ -1,6 +1,6 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<p>ol-layer-group</p>
+<h4 class="text-center"><%= link_to "Layer Group. OpenLayers Basic Layer Switcher", "http://raw.githack.com/walkermatt/ol-layerswitcher/master/examples/layerswitcher.html"%></h4>
 
 <div id="mapolg" 
    data-controller="ol-layer-group" 
