--- a/app/views/demo/olosmmap.html.erb
+++ b/app/views/demo/olosmmap.html.erb
@@ -1,6 +1,6 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<p>ol-osm-map</p>
+<h4 class="text-center"><%= link_to "OpenLayers Basic OSM Map", "https://openlayers.org/doc/tutorials/concepts.html" %></h4>
 
 <div id="maposm" data-controller="ol-osm-map" data-ol-osm-map-target="osmmap" style="height:400px"></div>
 
