--- a/app/views/demo/olstaticimage.html.erb
+++ b/app/views/demo/olstaticimage.html.erb
@@ -6,7 +6,7 @@
 
 <div>&nbsp;</div>
 <div class="text-center">
-	<%= link_to "OpenLayers with an OSM map", olosmmap_path, class: "btn btn-outline-success" %>
+	<%= link_to "OpenLayers with an OSM map <", olosmmap_path, class: "btn btn-outline-success" %>
 	<%= link_to "Home Page", root_path, class: "btn btn-outline-info"  %>
-	<%= link_to "Leaflet with a map and markers", leaflettest_path, class: "btn btn-outline-success" %>
+	<%= link_to "> Leaflet with a map and markers", leaflettest_path, class: "btn btn-outline-success" %>
 </div>
