--- a/app/views/demo/ollayerswitcher.html.erb
+++ b/app/views/demo/ollayerswitcher.html.erb
@@ -1,6 +1,6 @@
 <!-- views/demo/ollayergroup.html.erb -->
 
-<h4 class="text-center"><%= link_to "OpenLayers Basic Layer Switcher", "https://github.com/walkermatt/ol-layerswitcher"%></h4>
+<h4 class="text-center"><%= link_to "OpenLayers—Basic Layer Switcher", "https://github.com/walkermatt/ol-layerswitcher"%></h4>
 
 <div id="mapols" 
    data-controller="ol-layer-switcher" 
