--- a/app/views/demo/olosmmap.html.erb
+++ b/app/views/demo/olosmmap.html.erb
@@ -2,7 +2,7 @@
 
 <h4 class="text-center"><%= link_to "OpenLayers Basic OSM Map", "https://openlayers.org/doc/tutorials/concepts.html" %></h4>
 
-<div id="maposm" data-controller="ol-osm-map" data-ol-osm-map-target="osmmap" style="height:400px"></div>
+<div id="maposm" data-controller="ol-osm-map" data-ol-osm-map-target="maposm" style="height:400px"></div>
 
 <div>&nbsp;</div>
 <div class="text-center">
