--- a/app/views/demo/olstaticimage.html.erb
+++ b/app/views/demo/olstaticimage.html.erb
@@ -2,7 +2,7 @@
 
 <h4 class="text-center"><%= link_to "Static Image OpenLayers Example", "https://openlayers.org/en/latest/examples/static-image.html" %></h4>
 
-<div id="mapsi" data-controller="ol-static-image" data-ol-static-image-target="simage" style="height:400px"></div>
+<div id="mapsi" data-controller="ol-static-image" data-ol-static-image-target="mapsi" style="height:400px"></div>
 
 <div>&nbsp;</div>
 <div class="text-center">
