--- a/app/views/demo/ollayerswitcher.html.erb
+++ b/app/views/demo/ollayerswitcher.html.erb
@@ -2,9 +2,9 @@
 
 <h4 class="text-center"><%= link_to "OpenLayers—Basic Layer Switcher", "https://github.com/walkermatt/ol-layerswitcher"%></h4>
 
-<div id="mapols" 
+<div id="lsmap" 
    data-controller="ol-layer-switcher" 
-	 data-ol-layer-group-target="lgmap" 
+	 data-ol-layer-group-target="lsmap" 
 	 style="height:400px">
  </div>
 
