--- a/app/views/demo/ollayergroup.html.erb
+++ b/app/views/demo/ollayergroup.html.erb
@@ -2,12 +2,13 @@
 
 <h4 class="text-center"><%= link_to "Layer Group", "http://raw.githack.com/walkermatt/ol-layerswitcher/master/examples/layerswitcher.html"%></h4>
 
-<div id="mapolg" 
+<div id="lgmap" 
    data-controller="ol-layer-group" 
 	 data-ol-layer-group-target="lgmap" 
 	 style="height:400px">
  </div>
 
+<!-- Nav -->
 <div>&nbsp;</div>
 <div class="text-center">
 	<%= link_to "OpenLayers Basic Layer Switcher", ollayerswitcher_path, class: "btn btn-outline-success"  %>
