--- a/app/views/demo/index.html.erb
+++ b/app/views/demo/index.html.erb
@@ -39,5 +39,6 @@
 <div class="py-1"><%= link_to "OpenLayers With an OSM map", olosmmap_path %></div>
 <div class="py-1"><%= link_to "OpenLayers With a Static Image", olstaticimage_path %></div>
 <div class="py-1"><%= link_to "Leaflet with a map and markers", leaflettest_path %></div>
+<div class="py-1"><%= link_to "Leaflet With Timeline", leaflettimeline_path %></div>
 
 <div class="py-2">The two apps I'm working on: <%= link_to "Croatian Operated Restaurants in Early Los Angeles", "https://croatian-restaurants-la.fly.dev" %> and <%= link_to "Historical Street Names in Los Angeles", "https://la-hist-streets.fly.dev" %>. I hope to get back to these now that I'm sorting out Stimulus and fly.io (moved from Heroku).</div>
