--- a/app/views/demo/leaflettest.html.erb
+++ b/app/views/demo/leaflettest.html.erb
@@ -8,5 +8,5 @@
 <div class="text-center">
 	<%= link_to "OpenLayers with a Static Image", olstaticimage_path, class: "btn btn-outline-success" %>
 	<%= link_to "Home Page", root_path, class: "btn btn-outline-info"  %>
-	<%= link_to "OpenLayers with Layer Switcher", ollayerswitcher_path, class: "btn btn-outline-success caret-right-fill" %>
+	<%= link_to "Leaflet With Timeline", leaflettimeline_path, class: "btn btn-outline-success caret-right-fill" %>
 </div>
